@@ -1,18 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST ecore-1.7.10.tar.bz2 3455136 SHA256 c3f27ab18517b85b286871c6c7ccf8e22347f0661502db0fbf401537fa5a4bb6 SHA512 24fbe064913c566f885a2e51185b1f1d37c62c0d03ba0d549e9715ba516fb6b3f630ad331f89f66e91de1401b06b01b16916650448dda11d5e1efa24e52eaf39 WHIRLPOOL 93c187d8e8481f016aef07cefc99621eed136f43055387d31936c1745ac7929f71443f40cd26873b0cca891342dbff818e31b709cfb28385414dc78c890edcae
 DIST ecore-1.7.8.tar.bz2 3453891 SHA256 f3f97abc3a5dc91f4769eef4dd70de79a3daa36cddff52fa2a37b81e197c35f3 SHA512 f48c5580bdf2adbfafc07ec6528592a20f4a0e275e4186065cb11eebe27c0f502cbe4e2cce3c7d700fa9c6d05b1628ecc541b7ec82a01b1d9f21eb42c3070495 WHIRLPOOL 70b48a1bc8b699389904f70fb5757fc2c6f6b477f109a4f48962460352d25db33b1dd1978aaea36491cbf05bc0b6629a613d93634876c15be0de487413619530
 DIST ecore-1.7.9.tar.bz2 3454403 SHA256 dedab13e9602c301b1a3be6fdc4bdb17b4d8adb802d7e2d468b3282af2640b65 SHA512 4f0ca04c7c1989b9788a5e284431a64919e88860cd233687e5afbc6fff540869d0ceac0a2a30c80fbe109494bffc076149caff838a9cddfb502226675e68ba3d WHIRLPOOL a7339cd277431ca2b4c663a9b0c2860ce44fa2a8487bbde1e8503bf4bcc0147c9b0c5ad4c4b2594b46541a876df510d81b921d5d631195a987f09bc55435e198
+EBUILD ecore-1.7.10.ebuild 5232 SHA256 4596eed37f32a7d55862d05ec110bfd34b524cc6dfd9373196045e24fb4a3cb0 SHA512 bf12e1f144e4471b948c95c4aaf1a90f99f3519613b749968b117b0413cd064939a93e263cc57f02d930da5e73d4a64a564fae8f21477fa44cee0ac58603e07d WHIRLPOOL bc21b5f1fbbd37a0d01638f3b70d0c1f9a4445a409dc94adf92915d9a78d66257cc0ec85d88f26645805f7bc6782cfd574a4f76d165f7d06cb2593f8a6ddfbdc
 EBUILD ecore-1.7.8.ebuild 5524 SHA256 844ed55890526f98fed0191c1fd656dffaf9e5f156ade9752abacd2b5c9239f2 SHA512 934b996ee69318721289509ad596cfcdc8c70582f82513432a6ccd492e647c57ca30d7c9429e087aad340b6801ea4c67a7290e51c0776903df79be105692b290 WHIRLPOOL 45a74ff7b5bc2be7bebaafdfb888a1eb53dbf591207a723d39d9a1f9164ea5a58085a03a899a4f3b071b73ae4543884eedc2081abff2cd806e17ff375b2e7598
 EBUILD ecore-1.7.9.ebuild 5449 SHA256 45903a067260452d12b1ca71e55087b4d31d6daa86504e09aa246035a52bca97 SHA512 7e075aa7831f6879707ff81d3b98675ea67222853de01e9cee349ddd1130a6f095581a650bed76390c3edf8f98fe39ab46d3e69afee660fbbd7284dfa02c099d WHIRLPOOL 8d61c6fcbd3a6dba8d62da4e12ca255a32b498a1f868d9fc548049578cbcc7686fcc4d76a09795e090890b7db968d0c531873c94c28bfb913316bc44445a0890
-MISC ChangeLog 3946 SHA256 ede0cd3d2279cf91b3a76907e1164dc0f5af6da1a524639ba594bc536f4633f3 SHA512 9e1d85ca735ba5bb06c8fd999ec7fa3a23e1ea21f0199633a339125c11a366791240c378f4622195e6a8975aa4b757584febef009eb170a6cb60f1a425af1dc0 WHIRLPOOL 5f587d975666c280a5d6acd8bc4ff65856632a5282358886ebc04dbb2d0b6e041086e6d357c2b353e771ae6488bb7bf69b52078545ac7de4805d2f5b01460a2b
+EBUILD ecore-9999.ebuild 5230 SHA256 bf70cbd8a1ad35aa0bdec9e6b19c227837322db5bdc558a7894cf13bed5a0922 SHA512 90e6afb3bed01a28698c48961331bf8bbd9b3ef5900fb1efcce3beeb833da7649cfb1d4b3cad24308e4bc1982a83743da4c76db3803ee474b4ef20cb042b2717 WHIRLPOOL 7b5783d23304ddbb55aae3868d392d89a9356852642391337cfa8e6bc7aec986a247ca522039a91cde72db27b17af43b652dcbe2d924dc72f1a62d2696884025
+MISC ChangeLog 4150 SHA256 a37d52791903b428ca96fc198935587c221b9b99139a18ca9629fe8b86c107fa SHA512 85bed50110b66661ddad9dc54af4a37f57f006a9e71b764f9335e26cb744e83ec7446e35db7ed4272ac5ab4d6b5a343cb9c966d809efd2b28ae21acf059acbb2 WHIRLPOOL 6b154a5b2fc8d1456f8f57fd52914927c734a071cf935c8c58f431ea4b575b426c53ad9532705d2b4d509612eebdafbfe8d975e7e24ea489447e1a50dabb21c5
 MISC metadata.xml 3087 SHA256 6a4bbe8990b15f910bffa001e3854d11349279dfc00a9d2db1acdccde46a6c8c SHA512 280acf8cc10a1b4869eeea7c5773f480100c73e56b5fc643a15f560f3b5ef5c45a6b9416a1a0ab2cf3eead5424162e745f99640dcd0043ead9ad8fe3d817a81b WHIRLPOOL b0a7359ee50ad3ec2da58caef9986c353ef50437c42072018909aab48ccaa1ae381b15e68d126f108572ab57c28c623750f79d99263f2b30ae690bd3dbbf431a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iJwEAQEIAAYFAlKCb/MACgkQG7kqcTWJkGdd0gP+Lagbk8/4hBNDpEHHhsnK0Ef3
-LAZS+N+diWWHpwZBxgMCuw+3QWfj4iSyZwBvelhX6rsAY2sIWLL9+RpPL2gmC0Vb
-7uTVD0p9A0UA3/8eGaxeHYpAdxqd+Sfb3/e8gftwCVvohl6b9Q89jRTUb2BiQxEO
-/7vTVoKRrG58z3wOpAc=
-=pu3M
+iQIcBAEBCAAGBQJVB265AAoJEPGu1DbS6WIAdagP/i6zxIKVC4N7uhjIQ/YM629y
+AmiqumbiFnbAmVWRMnUdH1uabKdPR3YMyPlwYttC0ekuUN8SOjWNG/rLXnad00Gf
+EQ8D8a9ZrldOjOoeDx/UuQv5BN8UjmTCyZMY9SxELVIVVvFRFFmbIK3YLoSsYu4I
+Y9BTR6N7WfQ8nrNMxk7uMRIA5PfXLwXJUnmE/tPTYBFbvGxNgjD/Eqw3kM8WYAHs
+cI/QlLhauCDl2WqXmvABxVrHdzG2KjCyhfDdEZLmBFY2LhFLrt3C4bMjdl6Pbt8Z
+1tIIG6PYlMIQz6dqthZcaxfpEMPP4fG9sXAQs25xULsMptfFX0j04OnLaLuGn6H9
+io0npYdJG5ZzF+MuvJnpYVakLQmosXKzf0MTKYjRW3v+UWvTqOuTLLUfbjLVBNT6
+C6INL33u3fhRdL9ZzRvsuqCZ0MN5hoM3lgZJ2hvIhEonNbjG3ZVo5hElfZ8Ir30J
+qX8o4FiVTnZkd6jgGRqft5wepj9RLoXKxeErPKRcg2QXgg7bZRjvOp7LBwJidKPU
+8kLxcwCFzugbQRBzFi/ov9v/yoX0xV2b1KmjnXBWVUzbbPPoZk+WrK/Vqj92/Q4p
+q0tcVcoaCW70eNt/7mPPk72EMS1BrDAm12Gjy+Bc0+xpi8R8AGejitrWcF2uVo/r
+UBSayMCL67u7onctCswL
+=U8DR
 -----END PGP SIGNATURE-----
